--- a/index.html
+++ b/index.html
@@ -369,7 +369,8 @@
 
 <div class="script-item">
     <div class="script-title">2. Steal a Brainrot SAVE POSITION + TP + ESP BEST BRAINROT SCRIPT</div>
-    <div class="code-box" id="script2">loadstring(game:HttpGet("https://pastebin.com/raw/UD70yxvb"))()</div>
+    <div class="code-box" id="script2">FREE_76002dbd381656d46e167e6334900ece
+</div>
     <button class="copy-btn" onclick="copyToClipboard('script2', this)">Copy To Clipboard</button>
 </div>
 
