--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
         
         <div class="scripts-container">
             <div class="script-item">
-    <div class="script-title">1. Steal a Brainrot CRASH SCRIPT OP</div>
+    <div class="script-title">1. Steal a Brainrot BRAINROTS SPAWNER SCRIPT</div>
     <div class="code-box" id="script1">loadstring(game:HttpGet("https://pastefy.app/DdqmAYYX/raw"))()
 </div>
     <button class="copy-btn" onclick="copyToClipboard('script1', this)">Copy To Clipboard</button>
@@ -370,14 +370,14 @@
 
 <div class="script-item">
     <div class="script-title">2. Steal a Brainrot SAVE POSITION + TP + ESP BEST BRAINROT SCRIPT</div>
-    <div class="code-box" id="script2">FREE_76002dbd381656d46e167e6334900ece
+    <div class="code-box" id="script2">loadstring(game:HttpGet("https://raw.githubusercontent.com/Crypoth/StealABrainRotSpawner/refs/heads/main/XwareSpawner"))()
 </div>
     <button class="copy-btn" onclick="copyToClipboard('script2', this)">Copy To Clipboard</button>
 </div>
 
 <div class="script-item">
     <div class="script-title">3. Steal a Brainrot ZZZZ DESYNC SCRIPT</div>
-    <div class="code-box" id="script3">loadstring(game:HttpGet("https://pastebin.com/raw/UD70yxvb"))()</div>
+    <div class="code-box" id="script3">loadstring(game:HttpGet("https://raw.githubusercontent.com/zzzhubv2/desyncv2/refs/heads/main/loader"))()</div>
     <button class="copy-btn" onclick="copyToClipboard('script3', this)">Copy To Clipboard</button>
 </div>
 
@@ -388,8 +388,8 @@
 </div>
 
 <div class="script-item">
-    <div class="script-title">5. Steal a Brainrot GO TO BASE SCRIPT</div>
-    <div class="code-box" id="script5">loadstring(game:HttpGet("https://pastebin.com/raw/UD70yxvb"))()</div>
+    <div class="script-title">5. Steal a Brainrot KDML (INSTANT STEAL) SCRIPT</div>
+    <div class="code-box" id="script5">loadstring(game:HttpGet("https://raw.githubusercontent.com/kdmlv2/Instantsteal/refs/heads/main/loader"))()</div>
     <button class="copy-btn" onclick="copyToClipboard('script5', this)">Copy To Clipboard</button>
 </div>
 
@@ -400,14 +400,21 @@
 </div>
 
 <div class="script-item">
-    <div class="script-title">7. Steal a Brainrot LASER LAG SCRIPT</div>
-    <div class="code-box" id="script7">loadstring(game:HttpGet("https://pastebin.com/raw/UD70yxvb"))()</div>
+    <div class="script-title">7. Steal a Brainrot COOLDOWN REMOVER SCRIPT</div>
+    <div class="code-box" id="script7">loadstring(game:HttpGet("https://raw.githubusercontent.com/khanghay063-glitch/Crash/refs/heads/main/keyui.lua"))()</div>
     <button class="copy-btn" onclick="copyToClipboard('script7', this)">Copy To Clipboard</button>
 </div>
 
 <div class="script-item">
     <div class="script-title">8. Steal a Brainrot PAINTBALL LAGGER</div>
     <div class="code-box" id="script8">loadstring(game:HttpGet("https://pastebin.com/raw/UD70yxvb"))()</div>
+    <button class="copy-btn" onclick="copyToClipboard('script8', this)">Copy To Clipboard</button>
+</div>
+
+<div class="script-item">
+    <div class="script-title">9. Steal a Brainrot CRASHER SCRIPT</div>
+    <div class="code-box" id="script8">loadstring(game:HttpGet("https://raw.githubusercontent.com/DeltaScriptsV2/SabScriptsV3/refs/heads/main/ZZZZHUB"))()
+</div>
     <button class="copy-btn" onclick="copyToClipboard('script8', this)">Copy To Clipboard</button>
 </div>
 
