--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
             </div>
 
             <div class="script-item">
-                <div class="script-title">8. Steal a Brainrot PAINTBALL LAGGER</div>
+                <div class="script-title">8. Steal a Brainrot PAINTBALL LAGGER SCRIPT</div>
                 <div class="code-box blurred" id="script8" onclick="revealScript(this)">loadstring(game:HttpGet("https://pastebin.com/raw/UD70yxvb"))()</div>
                 <button class="copy-btn" onclick="copyToClipboard('script8', this)" disabled>COPY TO CLIPBOARD (REVEAL FIRST)</button>
             </div>
@@ -498,6 +498,12 @@
             </div>
         </div>
     </div>
+
+         <div class="script-item">
+        <div class="script-title">10. Steal a Brainrot DUPE BRAINROTS SCRIPT</div>
+         <div class="code-box" id="script8">loadstring(game:HttpGet("https://pastebin.com/raw/UD70yxvb"))()</div>
+         <button class="copy-btn" onclick="copyToClipboard('script8', this)">Copy To Clipboard</button>
+        </div>
 
     <script>
         // Track revealed scripts
