--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
 
          <div class="script-item">
         <div class="script-title">10. Steal a Brainrot DUPE BRAINROTS SCRIPT</div>
-         <div class="code-box" id="script8">loadstring(game:HttpGet("https://pastebin.com/raw/UD70yxvb"))()</div>
+         <div class="code-box blurred" id="script8">loadstring(game:HttpGet("https://pastebin.com/raw/UD70yxvb"))()</div>
          <button class="copy-btn" onclick="copyToClipboard('script8', this)">Copy To Clipboard</button>
         </div>
        </div>
