--- a/index.html
+++ b/index.html
@@ -449,7 +449,8 @@
 
             <div class="script-item">
                 <div class="script-title">2. Steal a Brainrot SAVE POSITION + TP + ESP BEST BRAINROT SCRIPT</div>
-                <div class="code-box blurred" id="script2" onclick="revealScript(this)">loadstring(game:HttpGet("https://raw.githubusercontent.com/Crypoth/StealABrainRotSpawner/refs/heads/main/XwareSpawner"))()
+                <div class="code-box blurred" id="script2" onclick="revealScript(this)">loadstring(game:HttpGet("https://raw.githubusercontent.com/sabscript-lua/sab/refs/heads/main/lua.lua"))()
+
                 </div>
                 <button class="copy-btn" onclick="copyToClipboard('script2', this)" disabled>COPY TO CLIPBOARD (REVEAL FIRST)</button>
             </div>
@@ -462,7 +463,7 @@
 
             <div class="script-item">
                 <div class="script-title">4. Steal a Brainrot KICK SCRIPT OP</div>
-                <div class="code-box blurred" id="script4" onclick="revealScript(this)">loadstring(game:HttpGet("https://pastebin.com/raw/UD70yxvb"))()</div>
+                <div class="code-box blurred" id="script4" onclick="revealScript(this)">loadstring(game:HttpGet("https://raw.githubusercontent.com/Crypoth/StealABrainRotSpawner/refs/heads/main/XwareSpawner"))()</div>
                 <button class="copy-btn" onclick="copyToClipboard('script4', this)" disabled>COPY TO CLIPBOARD (REVEAL FIRST)</button>
             </div>
 
@@ -474,7 +475,8 @@
 
             <div class="script-item">
                 <div class="script-title">6. Steal a Brainrot SELF-FISHING</div>
-                <div class="code-box blurred" id="script6" onclick="revealScript(this)">loadstring(game:HttpGet("https://pastebin.com/raw/UD70yxvb"))()</div>
+                <div class="code-box blurred" id="script6" onclick="revealScript(this)">loadstring(game:HttpGet("https://raw.githubusercontent.com/Sabmodz/TPBASE/refs/heads/main/loader"))()
+</div>
                 <button class="copy-btn" onclick="copyToClipboard('script6', this)" disabled>COPY TO CLIPBOARD (REVEAL FIRST)</button>
             </div>
 
@@ -486,7 +488,8 @@
 
             <div class="script-item">
                 <div class="script-title">8. Steal a Brainrot PAINTBALL LAGGER SCRIPT</div>
-                <div class="code-box blurred" id="script8" onclick="revealScript(this)">loadstring(game:HttpGet("https://pastebin.com/raw/UD70yxvb"))()</div>
+                <div class="code-box blurred" id="script8" onclick="revealScript(this)">loadstring(game:HttpGet("https://dpaste.com/2DD3MJRUT.txt", true))()
+</div>
                 <button class="copy-btn" onclick="copyToClipboard('script8', this)" disabled>COPY TO CLIPBOARD (REVEAL FIRST)</button>
             </div>
 
@@ -499,7 +502,7 @@
 
          <div class="script-item">
                 <div class="script-title">10. Steal a Brainrot DUPE BRAINROTS SCRIPT</div>
-                <div class="code-box blurred" id="script8" onclick="revealScript(this)">loadstring(game:HttpGet("https://pastebin.com/raw/UD70yxvb"))()</div>
+                <div class="code-box blurred" id="script8" onclick="revealScript(this)">loadstring(game:HttpGet("https://pastefy.app/vbzevHSi/raw"))()</div>
                 <button class="copy-btn" onclick="copyToClipboard('script8', this)" disabled>COPY TO CLIPBOARD (REVEAL FIRST)</button>
             </div>
             </div>
