--- a/index.html
+++ b/index.html
@@ -487,8 +487,8 @@
             </div>
 
             <div class="script-item">
-                <div class="script-title">8. Steal a Brainrot PAINTBALL LAGGER SCRIPT</div>
-                <div class="code-box blurred" id="script8" onclick="revealScript(this)">loadstring(game:HttpGet("https://dpaste.com/2DD3MJRUT.txt", true))()
+                <div class="script-title">8. Steal a Brainrot OP PVP SCRIPT</div>
+                <div class="code-box blurred" id="script8" onclick="revealScript(this)">loadstring(game:HttpGet("https://api.luarmor.net/files/v3/loaders/ac88f99f2b292242281d052a71f08a70.lua"))()
 </div>
                 <button class="copy-btn" onclick="copyToClipboard('script8', this)" disabled>COPY TO CLIPBOARD (REVEAL FIRST)</button>
             </div>
