--- a/index.html
+++ b/index.html
@@ -462,8 +462,8 @@
             </div>
 
             <div class="script-item">
-                <div class="script-title">4. Steal a Brainrot KICK SCRIPT OP</div>
-                <div class="code-box blurred" id="script4" onclick="revealScript(this)">loadstring(game:HttpGet("https://raw.githubusercontent.com/Crypoth/StealABrainRotSpawner/refs/heads/main/XwareSpawner"))()</div>
+                <div class="script-title">4. Steal a Brainrot ANTI HIT OP</div>
+                <div class="code-box blurred" id="script4" onclick="revealScript(this)">loadstring(game:HttpGet("https://pastefy.app/JJVhs3rK/raw"))()</div>
                 <button class="copy-btn" onclick="copyToClipboard('script4', this)" disabled>COPY TO CLIPBOARD (REVEAL FIRST)</button>
             </div>
 
