--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
             </div>
 
             <div class="script-item">
-                <div class="script-title">6. Steal a Brainrot MOREIRA SCRIPT</div>
+                <div class="script-title">6. Steal a Brainrot AUTO MOREIRA SCRIPT</div>
                 <div class="code-box blurred" id="script6" onclick="revealScript(this)">loadstring(game:HttpGet("https://raw.githubusercontent.com/INF-Hub-PL/StealaBrainrotScriptLibrary/refs/heads/main/Auto-Moreira"))()
 </div>
                 <button class="copy-btn" onclick="copyToClipboard('script6', this)" disabled>COPY TO CLIPBOARD (REVEAL FIRST)</button>
