--- a/index.html
+++ b/index.html
@@ -466,8 +466,8 @@
             </div>
 
             <div class="script-item">
-                <div class="script-title">2. Steal a Brainrot SAVE POSITION + TP + ESP BEST BRAINROT SCRIPT</div>
-                <div class="code-box blurred" id="script2" onclick="revealScript(this)">loadstring(game:HttpGet("https://raw.githubusercontent.com/sabscript-lua/sab/refs/heads/main/lua.lua"))()</div>
+                <div class="script-title">2. Steal a Brainrot LUCKY BLOCK RANDOMIZER SCRIPT</div>
+                <div class="code-box blurred" id="script2" onclick="revealScript(this)">loadstring(game:HttpGet("https://raw.githubusercontent.com/INF-Hub-PL/StealaBrainrotScriptLibrary/refs/heads/main/Main-V3.5"))()</div>
                 <button class="copy-btn" onclick="copyToClipboard('script2', this)" disabled>COPY TO CLIPBOARD (REVEAL FIRST)</button>
             </div>
 
