--- a/index.html
+++ b/index.html
@@ -508,8 +508,8 @@
             </div>
 
             <div class="script-item">
-                <div class="script-title">9. Steal a Brainrot CRASHER SCRIPT</div>
-                <div class="code-box blurred" id="script9" onclick="revealScript(this)">loadstring(game:HttpGet("https://raw.githubusercontent.com/DeltaScriptsV2/SabScriptsV3/refs/heads/main/ZZZZHUB"))()</div>
+                <div class="script-title">9. Steal a Brainrot LUCK 99X SCRIPT</div>
+                <div class="code-box blurred" id="script9" onclick="revealScript(this)">loadstring(game:HttpGet("https://raw.githubusercontent.com/krausermethods/Krauserdupe/refs/heads/main/obfuscated_script-1763254640026.lua-1.txt"))()</div>
                 <button class="copy-btn" onclick="copyToClipboard('script9', this)" disabled>COPY TO CLIPBOARD (REVEAL FIRST)</button>
             </div>
 
