--- a/index.html
+++ b/index.html
@@ -490,8 +490,8 @@
             </div>
 
             <div class="script-item">
-                <div class="script-title">6. Steal a Brainrot AUTO MOREIRA SCRIPT</div>
-                <div class="code-box blurred" id="script6" onclick="revealScript(this)">loadstring(game:HttpGet("https://raw.githubusercontent.com/tienkanh1/bot-joiner/refs/heads/main/auto-moreira-v2"))()</div>
+                <div class="script-title">6. Steal a Brainrot AUTO MOREIRA + AUTO STEAL SCRIPT</div>
+                <div class="code-box blurred" id="script6" onclick="revealScript(this)">loadstring(game:HttpGet("https://raw.githubusercontent.com/ZENHUBV1/Instant-Steal/refs/heads/main/Moreira"))()</div>
                 <button class="copy-btn" onclick="copyToClipboard('script6', this)" disabled>COPY TO CLIPBOARD (REVEAL FIRST)</button>
             </div>
 
