--- a/index.html
+++ b/index.html
@@ -484,8 +484,8 @@
             </div>
 
             <div class="script-item">
-                <div class="script-title">5. Steal a Brainrot KDML (INSTANT STEAL) SCRIPT</div>
-                <div class="code-box blurred" id="script5" onclick="revealScript(this)">loadstring(game:HttpGet("https://raw.githubusercontent.com/kdmlv2/Instantsteal/refs/heads/main/loader"))()</div>
+                <div class="script-title">5. Steal a Brainrot (INSTANT STEAL) SCRIPT</div>
+                <div class="code-box blurred" id="script5" onclick="revealScript(this)">loadstring(game:HttpGet("https://raw.githubusercontent.com/AutoStealScript/InstantSteal/refs/heads/main/AutoSteal"))()</div>
                 <button class="copy-btn" onclick="copyToClipboard('script5', this)" disabled>COPY TO CLIPBOARD (REVEAL FIRST)</button>
             </div>
 
