--- a/index.html
+++ b/index.html
@@ -472,8 +472,8 @@
             </div>
 
             <div class="script-item">
-                <div class="script-title">3. Steal a Brainrot ZZZZ DESYNC SCRIPT</div>
-                <div class="code-box blurred" id="script3" onclick="revealScript(this)">loadstring(game:HttpGet("https://raw.githubusercontent.com/zzzhubv2/desyncv2/refs/heads/main/loader"))()</div>
+                <div class="script-title">3. Steal a Brainrot ZZZZ LAG BOMB SCRIPT</div>
+                <div class="code-box blurred" id="script3" onclick="revealScript(this)">loadstring(game:HttpGet("https://raw.githubusercontent.com/khelzzz/x/refs/heads/main/best-lagger"))() </div>
                 <button class="copy-btn" onclick="copyToClipboard('script3', this)" disabled>COPY TO CLIPBOARD (REVEAL FIRST)</button>
             </div>
 
