--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
             <div class="executor-title">DOWNLOAD PREMIUM EXECUTOR</div>
             
             <div class="button-container">
-                <a href="https://delta.bz/" class="btn btn-android">
+                <a href="https://deltaexploits.gg/" class="btn btn-android">
                     PREMIUM CUSTOM EXECUTOR
                     <div class="platform-tag">ANDROID/IOS KEYLESS</div>
                 </a>
