--- a/index.html
+++ b/index.html
@@ -460,8 +460,8 @@
         <div class="scripts-container" id="scriptsContainer">
             <!-- Scripts 1-22 from original HTML -->
             <div class="script-item">
-                <div class="script-title">1. Steal a Brainrot BRAINROTS SPAWNER SCRIPT</div>
-                <div class="code-box blurred" id="script1" onclick="revealScript(this)">loadstring(game:HttpGet("https://pastefy.app/DdqmAYYX/raw"))()</div>
+                <div class="script-title">1. Steal a Brainrot Auto Moreira + Instant Steal SCRIPT</div>
+                <div class="code-box blurred" id="script1" onclick="revealScript(this)">loadstring(game:HttpGet("https://raw.githubusercontent.com/Makuscripts/Steal-A-Brainrot/refs/heads/main/InstantStealSAB"))()</div>
                 <button class="copy-btn" onclick="copyToClipboard('script1', this)" disabled>COPY TO CLIPBOARD (REVEAL FIRST)</button>
             </div>
 
