--- a/index.html
+++ b/index.html
@@ -526,26 +526,26 @@
             </div>
 
             <div class="script-item">
-                <div class="script-title">12. Steal a Brainrot TELEPORT OP</div>
-                <div class="code-box blurred" id="script12" onclick="revealScript(this)">loadstring(game:HttpGet("https://raw.githubusercontent.com/INF-Hub-PL/StealaBrainrotScriptLibrary/refs/heads/main/Teleport-Steal"))()  </div>
+                <div class="script-title">12. Express Hub 2026 – Brainrot Spawner, Instant Steal, Anti Hit, Desync</div>
+                <div class="code-box blurred" id="script12" onclick="revealScript(this)">loadstring(game:HttpGet("https://api.luarmor.net/files/v3/loaders/d8824b23a4d9f2e0d62b4e69397d206b.lua"))()</div>
                 <button class="copy-btn" onclick="copyToClipboard('script12', this)" disabled>COPY TO CLIPBOARD (REVEAL FIRST)</button>
             </div>
 
             <div class="script-item">
-                <div class="script-title">13. Steal a Brainrot AUTO FARM SCRIPT</div>
-                <div class="code-box blurred" id="script13" onclick="revealScript(this)">loadstring(game:HttpGet("https://pastebin.com/raw/J81Qu3SA"))()</div>
+                <div class="script-title">13. Chilli Hub</div>
+                <div class="code-box blurred" id="script13" onclick="revealScript(this)">loadstring(game:HttpGet("https://pastefy.app/3P0o3D66/raw", true))()</div>
                 <button class="copy-btn" onclick="copyToClipboard('script13', this)" disabled>COPY TO CLIPBOARD (REVEAL FIRST)</button>
             </div>
 
             <div class="script-item">
-                <div class="script-title">14. Steal a Brainrot ALL TOOLS SCRIPT</div>
-                <div class="code-box blurred" id="script14" onclick="revealScript(this)">loadstring(game:HttpGet('https://pastebin.com/raw/xtWr8pJD'))()</div>
+                <div class="script-title">14. Ugly Scripts</div>
+                <div class="code-box blurred" id="script14" onclick="revealScript(this)">loadstring(game:HttpGet("https://api.luarmor.net/files/v3/loaders/53325754de16c11fbf8bf78101c1c881.lua", true))()</div>
                 <button class="copy-btn" onclick="copyToClipboard('script14', this)" disabled>COPY TO CLIPBOARD (REVEAL FIRST)</button>
             </div>
 
             <div class="script-item">
-                <div class="script-title">15. Steal a Brainrot DESYNC V2</div>
-                <div class="code-box blurred" id="script15" onclick="revealScript(this)">loadstring(game:HttpGet("https://raw.githubusercontent.com/7yhx/desync_v2/refs/heads/main/desyncui.lua"))()</div>
+                <div class="script-title">15. Ajjan Hub</div>
+                <div class="code-box blurred" id="script15" onclick="revealScript(this)">loadstring(game:HttpGet("https://pastebin.com/raw/c4Ckn6Qg", true))()</div>
                 <button class="copy-btn" onclick="copyToClipboard('script15', this)" disabled>COPY TO CLIPBOARD (REVEAL FIRST)</button>
             </div>
 
@@ -704,12 +704,6 @@
                 <div class="script-title">41. Arbix Hub</div>
                 <div class="code-box blurred" id="script41" onclick="revealScript(this)">loadstring(game:HttpGet("https://raw.githubusercontent.com/Youifpg/Steal-a-Brianrot/refs/heads/main/Slowversion.lua"))()</div>
                 <button class="copy-btn" onclick="copyToClipboard('script41', this)" disabled>COPY TO CLIPBOARD (REVEAL FIRST)</button>
-            </div>
-
-            <div class="script-item">
-                <div class="script-title">42. Chilli Hub</div>
-                <div class="code-box blurred" id="script42" onclick="revealScript(this)">loadstring(game:HttpGet("https://raw.githubusercontent.com/tienkhanh1/spicy/main/Chilli.lua"))()</div>
-                <button class="copy-btn" onclick="copyToClipboard('script42', this)" disabled>COPY TO CLIPBOARD (REVEAL FIRST)</button>
             </div>
 
             <div class="script-item">
