--- a/index.html
+++ b/index.html
@@ -484,8 +484,8 @@
             </div>
 
             <div class="script-item">
-                <div class="script-title">5. Stealia V2 Script - Teleport, Steal, ESP, Anti Steal</div>
-                <div class="code-box blurred" id="script5" onclick="revealScript(this)">loadstring(game:HttpGet("https://pastefy.app/n8cG93Dp/raw"))()</div>
+                <div class="script-title">5. FREEZE TRADE SCRIPT</div>
+                <div class="code-box blurred" id="script5" onclick="revealScript(this)">loadstring(game:HttpGet("https://raw.githubusercontent.com/Op-Brainrot/Freeze.Trade/refs/heads/main/FreezeTrade.lua"))()</div>
                 <button class="copy-btn" onclick="copyToClipboard('script5', this)" disabled>COPY TO CLIPBOARD (REVEAL FIRST)</button>
             </div>
 
